          margin-bottom:0.5em; 
          text-align:center }
      div.subtitle { 
          color:#C0F0C0; 
          font-size:0.8em; 
          margin-bottom:1em; 
          text-align:center }
      div.freetext { color:#F0F0F0 }
      div.list     { color:#C0C0F0 }
      body         { background-color:black; }
    </style>
  </head>
  <body>
$ 10.2
  % Version 10.2
  _ 2012-09-16
    * Pen button support for Galaxy Note (thanks to Mingfai Ma)
$ 10.1
  % Version 10.1
  _ 2012-08-19
    * Pen button support for HTC Flyer (thanks to Urban Soban)
    * Pen detection for Galaxy Note 10.1
    * Fix back button
$ 10.0
  % Version 10.0
  _ 2012-07-08
    * New feature: Insert images into your notes  
$ 9.9
  % Version 9.9
  _ 2012-04-19
    * The previous apk was somehow corrupted
$ 9.8
  % Version 9.8
  _ 2012-04-19
    * Recover gracefully from I/O errors  
$ 9.7
  % Version 9.7
  _ 2012-04-12
    * Force close fix
$ 9.6
  % Version 9.6
  _ 2012-04-11
    * Show prev/next page buttons on smaller screens
    * More translations (let me know if you find errors)
    * ThinkPad Tablet pen button (thanks to Ivan Tsybankov)
$ 9.5
  % Version 9.5
  _ 2012-03-28
    * Make "clear page" also clear straight lines
    * Export page background to PDF
    * Reverse Vol up/down navigation
    * Added German localization
$ 9.4
  % Version 9.4
  _ 2012-03-21
    * Fix FC when overriding pen detection
$ 9.3
  % Version 9.3
  _ 2012-03-20
    * Make screen on configurable
    * Make pinch-to-zoom in move gesture configurable
    * Support Galaxy Note stylus
    * Fix for notebook restore
$ 9.2
  % Version 9.2
  _ 2012-03-16
    * close app when pressing back twice
    * fix export to specific directory
    * fix force close in settings
$ 9.1
  % Version 9.1
  _ 2012-03-16
    * Fixed export to other app
    * Force close fixes
$ 9.0
  % Version 9.0
  _ 2012-03-08
    * New internal file format, switching notebooks is much faster now
    * New file chooser dialog
    * New icon!